# opentelemetry-cpp-wrapper

./: .gitignore  CMakeLists.txt
common/: CMakeLists.txt
common/include/: metrics_registry.hpp
common/src/: dummy.cpp
opentelemetry/: CMakeLists.txt
opentelemetry/include/: custom_prometheus_exporter.hpp  metrics_impl.hpp  otel_registry.hpp
opentelemetry/src/: main.cpp  metrics_impl.cpp  otel_registry.cpp
opentelemetry/tests/: CMakeLists.txt  metric_tests.cpp  test_metric_tests.cpp
